Cleaned dataset and started new file for topic modelling:

--- a/song_lyrics/exploration.ipynb
+++ b/song_lyrics/exploration.ipynb
@@ -295,6 +295,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clean Data Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_data = data[data['song_length'] != None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_data = cleaned_data[cleaned_data['year'] > 1969]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_data = cleaned_data[~cleaned_data['genre'].isin(['Not Available', 'Other'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_data.to_csv('cleaned_data.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
