--- a/song_lyrics/topic_analysis.ipynb
+++ b/song_lyrics/topic_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -49,9 +49,11 @@
        "      <th>artist</th>\n",
        "      <th>genre</th>\n",
        "      <th>lyrics</th>\n",
+       "      <th>song_length</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>index</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -67,6 +69,7 @@
        "      <td>beyonce-knowles</td>\n",
        "      <td>Pop</td>\n",
        "      <td>Oh baby, how you doing?\\nYou know I'm gonna cu...</td>\n",
+       "      <td>1961.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -75,6 +78,7 @@
        "      <td>beyonce-knowles</td>\n",
        "      <td>Pop</td>\n",
        "      <td>playin' everything so easy,\\nit's like you see...</td>\n",
+       "      <td>1270.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -83,6 +87,7 @@
        "      <td>beyonce-knowles</td>\n",
        "      <td>Pop</td>\n",
        "      <td>If you search\\nFor tenderness\\nIt isn't hard t...</td>\n",
+       "      <td>827.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -91,6 +96,7 @@
        "      <td>beyonce-knowles</td>\n",
        "      <td>Pop</td>\n",
        "      <td>Oh oh oh I, oh oh oh I\\n[Verse 1:]\\nIf I wrote...</td>\n",
+       "      <td>2344.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -99,6 +105,7 @@
        "      <td>beyonce-knowles</td>\n",
        "      <td>Pop</td>\n",
        "      <td>Party the people, the people the party it's po...</td>\n",
+       "      <td>1540.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -113,16 +120,16 @@
        "3      you-are-my-rock  2009  beyonce-knowles   Pop   \n",
        "4        black-culture  2009  beyonce-knowles   Pop   \n",
        "\n",
-       "                                                  lyrics  \n",
-       "index                                                     \n",
-       "0      Oh baby, how you doing?\\nYou know I'm gonna cu...  \n",
-       "1      playin' everything so easy,\\nit's like you see...  \n",
-       "2      If you search\\nFor tenderness\\nIt isn't hard t...  \n",
-       "3      Oh oh oh I, oh oh oh I\\n[Verse 1:]\\nIf I wrote...  \n",
-       "4      Party the people, the people the party it's po...  "
+       "                                                  lyrics  song_length  \n",
+       "index                                                                  \n",
+       "0      Oh baby, how you doing?\\nYou know I'm gonna cu...       1961.0  \n",
+       "1      playin' everything so easy,\\nit's like you see...       1270.0  \n",
+       "2      If you search\\nFor tenderness\\nIt isn't hard t...        827.0  \n",
+       "3      Oh oh oh I, oh oh oh I\\n[Verse 1:]\\nIf I wrote...       2344.0  \n",
+       "4      Party the people, the people the party it's po...       1540.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,11 +140,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lyrics_documents = list(data['lyrics'])"
+    "lyrics_documents = list(data['lyrics'].dropna())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Topic Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.tokenize import RegexpTokenizer\n",
+    "from stop_words import get_stop_words\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "from gensim import corpora, models\n",
+    "import gensim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = RegexpTokenizer(r'\\w+')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "en_stop = get_stop_words('en')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_stemmer = PorterStemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in lyrics_documents:\n",
+    "    \n",
+    "    # clean and tokenize document string\n",
+    "    raw = i.lower()\n",
+    "    tokens = tokenizer.tokenize(raw)\n",
+    "\n",
+    "    # remove stop words from tokens\n",
+    "    stopped_tokens = [i for i in tokens if not i in en_stop]\n",
+    "    \n",
+    "    # stem tokens\n",
+    "    stemmed_tokens = [p_stemmer.stem(i) for i in stopped_tokens]\n",
+    "    \n",
+    "    # add tokens to list\n",
+    "    texts.append(stemmed_tokens)"
    ]
   },
   {
