--- a/song_lyrics/topic_analysis.ipynb
+++ b/song_lyrics/topic_analysis.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import ipython_bell"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -51,9 +52,11 @@
        "      <th>genre</th>\n",
        "      <th>lyrics</th>\n",
        "      <th>song_length</th>\n",
+       "      <th>language</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>index</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -71,6 +74,7 @@
        "      <td>Pop</td>\n",
        "      <td>Oh baby, how you doing?\\nYou know I'm gonna cu...</td>\n",
        "      <td>1961.0</td>\n",
+       "      <td>en</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -80,6 +84,7 @@
        "      <td>Pop</td>\n",
        "      <td>playin' everything so easy,\\nit's like you see...</td>\n",
        "      <td>1270.0</td>\n",
+       "      <td>en</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -89,6 +94,7 @@
        "      <td>Pop</td>\n",
        "      <td>If you search\\nFor tenderness\\nIt isn't hard t...</td>\n",
        "      <td>827.0</td>\n",
+       "      <td>en</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -98,6 +104,7 @@
        "      <td>Pop</td>\n",
        "      <td>Oh oh oh I, oh oh oh I\\n[Verse 1:]\\nIf I wrote...</td>\n",
        "      <td>2344.0</td>\n",
+       "      <td>en</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -107,6 +114,7 @@
        "      <td>Pop</td>\n",
        "      <td>Party the people, the people the party it's po...</td>\n",
        "      <td>1540.0</td>\n",
+       "      <td>en</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -121,16 +129,16 @@
        "3      you-are-my-rock  2009  beyonce-knowles   Pop   \n",
        "4        black-culture  2009  beyonce-knowles   Pop   \n",
        "\n",
-       "                                                  lyrics  song_length  \n",
-       "index                                                                  \n",
-       "0      Oh baby, how you doing?\\nYou know I'm gonna cu...       1961.0  \n",
-       "1      playin' everything so easy,\\nit's like you see...       1270.0  \n",
-       "2      If you search\\nFor tenderness\\nIt isn't hard t...        827.0  \n",
-       "3      Oh oh oh I, oh oh oh I\\n[Verse 1:]\\nIf I wrote...       2344.0  \n",
-       "4      Party the people, the people the party it's po...       1540.0  "
+       "                                                  lyrics  song_length language  \n",
+       "index                                                                           \n",
+       "0      Oh baby, how you doing?\\nYou know I'm gonna cu...       1961.0       en  \n",
+       "1      playin' everything so easy,\\nit's like you see...       1270.0       en  \n",
+       "2      If you search\\nFor tenderness\\nIt isn't hard t...        827.0       en  \n",
+       "3      Oh oh oh I, oh oh oh I\\n[Verse 1:]\\nIf I wrote...       2344.0       en  \n",
+       "4      Party the people, the people the party it's po...       1540.0       en  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "237420"
+       "216631"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,10 +234,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%bell\n",
     "for i in lyrics_documents:\n",
     "    \n",
     "    # clean and tokenize document string\n",
@@ -248,16 +257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%bell\n",
     "dictionary = corpora.Dictionary(texts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,11 +276,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "ldamodel = gensim.models.ldamodel.LdaModel(corpus, num_topics=2, id2word = dictionary, passes=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, '0.019*\"s\" + 0.016*\"t\" + 0.016*\"like\" + 0.016*\"m\"'), (1, '0.027*\"s\" + 0.026*\"t\" + 0.016*\"love\" + 0.015*\"can\"')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ldamodel.print_topics(num_topics=2, num_words=4))"
    ]
   },
   {
@@ -282,24 +309,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, '0.025*\"s\" + 0.024*\"t\" + 0.015*\"m\" + 0.012*\"can\"'), (1, '0.021*\"la\" + 0.016*\"de\" + 0.015*\"que\" + 0.011*\"da\"')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(ldamodel.print_topics(num_topics=2, num_words=4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(0, '0.025*\"s\" + 0.024*\"t\" + 0.015*\"m\" + 0.012*\"can\" + 0.011*\"love\" + 0.010*\"know\" + 0.010*\"don\" + 0.010*\"like\" + 0.009*\"just\" + 0.009*\"re\" + 0.008*\"get\" + 0.008*\"ll\" + 0.007*\"now\" + 0.007*\"oh\" + 0.007*\"go\" + 0.007*\"got\" + 0.006*\"time\" + 0.006*\"one\" + 0.006*\"come\" + 0.006*\"see\" + 0.006*\"want\" + 0.005*\"never\" + 0.005*\"make\" + 0.005*\"let\" + 0.005*\"ve\" + 0.005*\"say\" + 0.005*\"feel\" + 0.005*\"will\" + 0.005*\"take\" + 0.005*\"way\"'), (1, '0.021*\"la\" + 0.016*\"de\" + 0.015*\"que\" + 0.011*\"da\" + 0.010*\"ich\" + 0.009*\"y\" + 0.009*\"na\" + 0.007*\"ã\" + 0.007*\"tu\" + 0.007*\"und\" + 0.007*\"te\" + 0.007*\"en\" + 0.006*\"un\" + 0.006*\"mi\" + 0.006*\"es\" + 0.006*\"el\" + 0.006*\"die\" + 0.006*\"le\" + 0.006*\"du\" + 0.006*\"lo\" + 0.005*\"ì\" + 0.005*\"ë\" + 0.005*\"se\" + 0.005*\"o\" + 0.004*\"n\" + 0.004*\"yo\" + 0.004*\"der\" + 0.004*\"s\" + 0.004*\"nicht\" + 0.004*\"si\"')]\n"
+      "[(0, '0.019*\"s\" + 0.016*\"t\" + 0.016*\"like\" + 0.016*\"m\" + 0.014*\"get\" + 0.012*\"got\" + 0.007*\"nigga\" + 0.007*\"ain\" + 0.006*\"don\" + 0.006*\"know\" + 0.006*\"fuck\" + 0.006*\"yeah\" + 0.006*\"ya\" + 0.006*\"man\" + 0.005*\"just\" + 0.005*\"girl\" + 0.005*\"go\" + 0.005*\"now\" + 0.005*\"shit\" + 0.005*\"caus\" + 0.005*\"can\" + 0.005*\"back\" + 0.004*\"make\" + 0.004*\"la\" + 0.004*\"em\" + 0.004*\"come\" + 0.004*\"money\" + 0.004*\"let\" + 0.004*\"see\" + 0.003*\"bitch\"'), (1, '0.027*\"s\" + 0.026*\"t\" + 0.016*\"love\" + 0.015*\"can\" + 0.014*\"m\" + 0.012*\"know\" + 0.012*\"don\" + 0.012*\"re\" + 0.011*\"just\" + 0.010*\"ll\" + 0.009*\"oh\" + 0.009*\"time\" + 0.008*\"now\" + 0.008*\"go\" + 0.008*\"one\" + 0.008*\"ve\" + 0.007*\"never\" + 0.007*\"like\" + 0.007*\"come\" + 0.007*\"will\" + 0.007*\"want\" + 0.007*\"see\" + 0.007*\"feel\" + 0.006*\"way\" + 0.006*\"let\" + 0.006*\"say\" + 0.006*\"take\" + 0.006*\"make\" + 0.005*\"day\" + 0.005*\"away\"')]\n"
      ]
     }
    ],
@@ -309,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,19 +328,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 0.99792165)]\n"
+      "[(1, 0.99516976)]\n"
      ]
     }
    ],
    "source": [
-    "print(ldamodel[corpus[0]])"
+    "print(ldamodel[corpus[6]])"
    ]
   },
   {
