Converted string values

--- a/ontario_school_stats/data_exploration.ipynb
+++ b/ontario_school_stats/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -47,27 +47,27 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Board Number</th>\n",
-       "      <th>Board Name</th>\n",
-       "      <th>School Number</th>\n",
-       "      <th>School Name</th>\n",
-       "      <th>Municipality</th>\n",
-       "      <th>Enrolment</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>Percentage of Students Whose First Language Is Not English</th>\n",
-       "      <th>Percentage of Students Whose First Language Is Not French</th>\n",
+       "      <th>board_id</th>\n",
+       "      <th>board_name</th>\n",
+       "      <th>school_id</th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>municipality</th>\n",
+       "      <th>enrolment</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>first_lang_not_english</th>\n",
+       "      <th>first_lang_not_french</th>\n",
        "      <th>...</th>\n",
-       "      <th>Percentage of Students Receiving Special Education Services</th>\n",
-       "      <th>Percentage of Students Identified as Gifted</th>\n",
-       "      <th>Percentage of Grade 3 Students Achieving the Provincial Standard in Reading</th>\n",
-       "      <th>Percentage of Grade 3 Students Achieving the Provincial Standard in Writing</th>\n",
-       "      <th>Percentage of Grade 3 Students Achieving the Provincial Standard in Mathematics</th>\n",
-       "      <th>Percentage of Grade 6 Students Achieving the Provincial Standard in Reading</th>\n",
-       "      <th>Percentage of Grade 6 Students Achieving the Provincial Standard in Writing</th>\n",
-       "      <th>Percentage of Grade 6 Students Achieving the Provincial Standard in Mathematics</th>\n",
-       "      <th>Percentage of Children Who Live in Low-Income Households</th>\n",
-       "      <th>Percentage of Students Whose Parents Have Some Unviersity Education</th>\n",
+       "      <th>special_ed</th>\n",
+       "      <th>gifted</th>\n",
+       "      <th>grade_3_standard_reading</th>\n",
+       "      <th>grade_3_standard_writing</th>\n",
+       "      <th>grade_3_standard_math</th>\n",
+       "      <th>grade_6_standard_reading</th>\n",
+       "      <th>grade_6_standard_writing</th>\n",
+       "      <th>grade_6_standard_math</th>\n",
+       "      <th>low_income</th>\n",
+       "      <th>parent_university_edu</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -197,122 +197,52 @@
        "</div>"
       ],
       "text/plain": [
-       "  Board Number  Board Name  School Number  \\\n",
-       "0       B28010  Algoma DSB          19186   \n",
-       "1       B28010  Algoma DSB          67679   \n",
-       "2       B28010  Algoma DSB          43362   \n",
-       "3       B28010  Algoma DSB          54542   \n",
-       "4       B28010  Algoma DSB         490822   \n",
+       "  board_id  board_name  school_id                            school_name  \\\n",
+       "0   B28010  Algoma DSB      19186              Anna McCrea Public School   \n",
+       "1   B28010  Algoma DSB      67679         Arthur Henderson Public School   \n",
+       "2   B28010  Algoma DSB      43362           Ben R McMullin Public School   \n",
+       "3   B28010  Algoma DSB      54542              Blind River Public School   \n",
+       "4   B28010  Algoma DSB     490822  Boreal French Immersion Public School   \n",
        "\n",
-       "                             School Name      Municipality Enrolment  \\\n",
-       "0              Anna McCrea Public School  Sault Ste. Marie      168    \n",
-       "1         Arthur Henderson Public School       Bruce Mines      101    \n",
-       "2           Ben R McMullin Public School  Sault Ste. Marie      189    \n",
-       "3              Blind River Public School       Blind River      187    \n",
-       "4  Boreal French Immersion Public School  Sault Ste. Marie      392    \n",
+       "       municipality enrolment       lat      long first_lang_not_english  \\\n",
+       "0  Sault Ste. Marie      168   46.50593 -84.28732                     SP   \n",
+       "1       Bruce Mines      101   46.30183 -83.78020                     SP   \n",
+       "2  Sault Ste. Marie      189   46.52455 -84.29804                     SP   \n",
+       "3       Blind River      187   46.18454 -82.95760                     SP   \n",
+       "4  Sault Ste. Marie      392   46.52447 -84.31073                     SP   \n",
        "\n",
-       "   Latitude  Longitude  \\\n",
-       "0  46.50593  -84.28732   \n",
-       "1  46.30183  -83.78020   \n",
-       "2  46.52455  -84.29804   \n",
-       "3  46.18454  -82.95760   \n",
-       "4  46.52447  -84.31073   \n",
+       "  first_lang_not_french          ...          special_ed gifted  \\\n",
+       "0                   100          ...                15.5    NaN   \n",
+       "1                   100          ...                11.9    NaN   \n",
+       "2                   100          ...                13.8     SP   \n",
+       "3                   100          ...                  23    NaN   \n",
+       "4                   100          ...                 9.4     SP   \n",
        "\n",
-       "  Percentage of Students Whose First Language Is Not English  \\\n",
-       "0                                                 SP           \n",
-       "1                                                 SP           \n",
-       "2                                                 SP           \n",
-       "3                                                 SP           \n",
-       "4                                                 SP           \n",
+       "  grade_3_standard_reading grade_3_standard_writing grade_3_standard_math  \\\n",
+       "0                      77%                      58%                   81%   \n",
+       "1                      38%                      31%                   46%   \n",
+       "2                      44%                      38%                   44%   \n",
+       "3                      50%                      36%                   50%   \n",
+       "4                      N/D                      N/D                   N/D   \n",
        "\n",
-       "  Percentage of Students Whose First Language Is Not French  \\\n",
-       "0                                                100          \n",
-       "1                                                100          \n",
-       "2                                                100          \n",
-       "3                                                100          \n",
-       "4                                                100          \n",
+       "  grade_6_standard_reading grade_6_standard_writing grade_6_standard_math  \\\n",
+       "0                      80%                      67%                   53%   \n",
+       "1                      N/D                      N/D                   N/D   \n",
+       "2                      74%                      65%                   22%   \n",
+       "3                      52%                      65%                   30%   \n",
+       "4                      78%                      73%                   45%   \n",
        "\n",
-       "                                  ...                                  \\\n",
-       "0                                 ...                                   \n",
-       "1                                 ...                                   \n",
-       "2                                 ...                                   \n",
-       "3                                 ...                                   \n",
-       "4                                 ...                                   \n",
-       "\n",
-       "  Percentage of Students Receiving Special Education Services  \\\n",
-       "0                                               15.5            \n",
-       "1                                               11.9            \n",
-       "2                                               13.8            \n",
-       "3                                                 23            \n",
-       "4                                                9.4            \n",
-       "\n",
-       "  Percentage of Students Identified as Gifted  \\\n",
-       "0                                         NaN   \n",
-       "1                                         NaN   \n",
-       "2                                          SP   \n",
-       "3                                         NaN   \n",
-       "4                                          SP   \n",
-       "\n",
-       "  Percentage of Grade 3 Students Achieving the Provincial Standard in Reading  \\\n",
-       "0                                                77%                            \n",
-       "1                                                38%                            \n",
-       "2                                                44%                            \n",
-       "3                                                50%                            \n",
-       "4                                                N/D                            \n",
-       "\n",
-       "  Percentage of Grade 3 Students Achieving the Provincial Standard in Writing  \\\n",
-       "0                                                58%                            \n",
-       "1                                                31%                            \n",
-       "2                                                38%                            \n",
-       "3                                                36%                            \n",
-       "4                                                N/D                            \n",
-       "\n",
-       "  Percentage of Grade 3 Students Achieving the Provincial Standard in Mathematics  \\\n",
-       "0                                                81%                                \n",
-       "1                                                46%                                \n",
-       "2                                                44%                                \n",
-       "3                                                50%                                \n",
-       "4                                                N/D                                \n",
-       "\n",
-       "  Percentage of Grade 6 Students Achieving the Provincial Standard in Reading  \\\n",
-       "0                                                80%                            \n",
-       "1                                                N/D                            \n",
-       "2                                                74%                            \n",
-       "3                                                52%                            \n",
-       "4                                                78%                            \n",
-       "\n",
-       "  Percentage of Grade 6 Students Achieving the Provincial Standard in Writing  \\\n",
-       "0                                                67%                            \n",
-       "1                                                N/D                            \n",
-       "2                                                65%                            \n",
-       "3                                                65%                            \n",
-       "4                                                73%                            \n",
-       "\n",
-       "  Percentage of Grade 6 Students Achieving the Provincial Standard in Mathematics  \\\n",
-       "0                                                53%                                \n",
-       "1                                                N/D                                \n",
-       "2                                                22%                                \n",
-       "3                                                30%                                \n",
-       "4                                                45%                                \n",
-       "\n",
-       "  Percentage of Children Who Live in Low-Income Households  \\\n",
-       "0                                                8.1         \n",
-       "1                                              13.42         \n",
-       "2                                               27.9         \n",
-       "3                                              22.36         \n",
-       "4                                              15.65         \n",
-       "\n",
-       "  Percentage of Students Whose Parents Have Some Unviersity Education  \n",
-       "0                                              20.97                   \n",
-       "1                                                 SP                   \n",
-       "2                                              14.95                   \n",
-       "3                                               10.7                   \n",
-       "4                                              13.35                   \n",
+       "  low_income parent_university_edu  \n",
+       "0        8.1                 20.97  \n",
+       "1      13.42                    SP  \n",
+       "2       27.9                 14.95  \n",
+       "3      22.36                  10.7  \n",
+       "4      15.65                 13.35  \n",
        "\n",
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,6 +250,24 @@
    "source": [
     "data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
