Cleaned data a bit - cdn-crime

--- a/cdn-crime/analysis.ipynb
+++ b/cdn-crime/analysis.ipynb
@@ -2,14 +2,319 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "% matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "occurred_data = pd.read_csv('data/occured-rate-per-1000.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>1998</th>\n",
+       "      <th>1999</th>\n",
+       "      <th>2000</th>\n",
+       "      <th>2001</th>\n",
+       "      <th>2002</th>\n",
+       "      <th>2003</th>\n",
+       "      <th>2004</th>\n",
+       "      <th>2005</th>\n",
+       "      <th>2006</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2008</th>\n",
+       "      <th>2009</th>\n",
+       "      <th>2010</th>\n",
+       "      <th>2011</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>St. John's</td>\n",
+       "      <td>7840.62</td>\n",
+       "      <td>6596.12</td>\n",
+       "      <td>7294.28</td>\n",
+       "      <td>7030</td>\n",
+       "      <td>7428.25</td>\n",
+       "      <td>6903.21</td>\n",
+       "      <td>7163.52</td>\n",
+       "      <td>6955.84</td>\n",
+       "      <td>7131.69</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7597.73</td>\n",
+       "      <td>8084.74</td>\n",
+       "      <td>8479.56</td>\n",
+       "      <td>7867.74</td>\n",
+       "      <td>7611.67</td>\n",
+       "      <td>7307.64</td>\n",
+       "      <td>6451.93</td>\n",
+       "      <td>6525.37</td>\n",
+       "      <td>6333.97</td>\n",
+       "      <td>5751.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Prince Edward Island</td>\n",
+       "      <td>7110.2</td>\n",
+       "      <td>7933.47</td>\n",
+       "      <td>7657.2</td>\n",
+       "      <td>7866.06</td>\n",
+       "      <td>8655.28</td>\n",
+       "      <td>9523.32</td>\n",
+       "      <td>8974.1</td>\n",
+       "      <td>8312.63</td>\n",
+       "      <td>7513.15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6934.08</td>\n",
+       "      <td>7132.49</td>\n",
+       "      <td>7140.84</td>\n",
+       "      <td>7289.74</td>\n",
+       "      <td>7360.08</td>\n",
+       "      <td>6541.41</td>\n",
+       "      <td>5303.77</td>\n",
+       "      <td>4677.40</td>\n",
+       "      <td>4928.68</td>\n",
+       "      <td>4620.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Halifax</td>\n",
+       "      <td>10328.9</td>\n",
+       "      <td>10370.94</td>\n",
+       "      <td>9051.1</td>\n",
+       "      <td>9611.07</td>\n",
+       "      <td>9395.51</td>\n",
+       "      <td>9754.53</td>\n",
+       "      <td>10371.9</td>\n",
+       "      <td>9566.1</td>\n",
+       "      <td>9229.97</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7941.02</td>\n",
+       "      <td>7884.31</td>\n",
+       "      <td>8142.62</td>\n",
+       "      <td>7299.21</td>\n",
+       "      <td>6596.21</td>\n",
+       "      <td>5910.15</td>\n",
+       "      <td>5912.72</td>\n",
+       "      <td>5385.35</td>\n",
+       "      <td>5205.48</td>\n",
+       "      <td>5557.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Moncton</td>\n",
+       "      <td>..</td>\n",
+       "      <td>..</td>\n",
+       "      <td>..</td>\n",
+       "      <td>..</td>\n",
+       "      <td>..</td>\n",
+       "      <td>..</td>\n",
+       "      <td>..</td>\n",
+       "      <td>..</td>\n",
+       "      <td>8646.60</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6866.40</td>\n",
+       "      <td>6593.89</td>\n",
+       "      <td>6609.92</td>\n",
+       "      <td>6767.04</td>\n",
+       "      <td>7740.44</td>\n",
+       "      <td>6659.25</td>\n",
+       "      <td>6265.06</td>\n",
+       "      <td>7366.87</td>\n",
+       "      <td>6788.20</td>\n",
+       "      <td>7786.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Saint John</td>\n",
+       "      <td>8689.34</td>\n",
+       "      <td>7972.84</td>\n",
+       "      <td>7335.47</td>\n",
+       "      <td>7185.43</td>\n",
+       "      <td>8149.06</td>\n",
+       "      <td>8221.61</td>\n",
+       "      <td>7657.26</td>\n",
+       "      <td>6975.85</td>\n",
+       "      <td>7170.61</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7521.62</td>\n",
+       "      <td>7244.58</td>\n",
+       "      <td>7014.68</td>\n",
+       "      <td>6250.72</td>\n",
+       "      <td>6214.52</td>\n",
+       "      <td>5620.77</td>\n",
+       "      <td>5215.10</td>\n",
+       "      <td>5132.38</td>\n",
+       "      <td>4812.21</td>\n",
+       "      <td>4954.71</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Geography     1998      1999     2000     2001     2002  \\\n",
+       "0            St. John's  7840.62   6596.12  7294.28     7030  7428.25   \n",
+       "1  Prince Edward Island   7110.2   7933.47   7657.2  7866.06  8655.28   \n",
+       "2               Halifax  10328.9  10370.94   9051.1  9611.07  9395.51   \n",
+       "3               Moncton       ..        ..       ..       ..       ..   \n",
+       "4            Saint John  8689.34   7972.84  7335.47  7185.43  8149.06   \n",
+       "\n",
+       "      2003     2004     2005     2006   ...        2008     2009     2010  \\\n",
+       "0  6903.21  7163.52  6955.84  7131.69   ...     7597.73  8084.74  8479.56   \n",
+       "1  9523.32   8974.1  8312.63  7513.15   ...     6934.08  7132.49  7140.84   \n",
+       "2  9754.53  10371.9   9566.1  9229.97   ...     7941.02  7884.31  8142.62   \n",
+       "3       ..       ..       ..  8646.60   ...     6866.40  6593.89  6609.92   \n",
+       "4  8221.61  7657.26  6975.85  7170.61   ...     7521.62  7244.58  7014.68   \n",
+       "\n",
+       "      2011     2012     2013     2014     2015     2016     2017  \n",
+       "0  7867.74  7611.67  7307.64  6451.93  6525.37  6333.97  5751.42  \n",
+       "1  7289.74  7360.08  6541.41  5303.77  4677.40  4928.68  4620.41  \n",
+       "2  7299.21  6596.21  5910.15  5912.72  5385.35  5205.48  5557.99  \n",
+       "3  6767.04  7740.44  6659.25  6265.06  7366.87  6788.20  7786.08  \n",
+       "4  6250.72  6214.52  5620.77  5215.10  5132.38  4812.21  4954.71  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "occurred_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>St. John's</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>7840.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Prince Edward Island</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>7110.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Halifax</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>10328.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Moncton</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Saint John</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>8689.34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Geography variable    value\n",
+       "0            St. John's     1998  7840.62\n",
+       "1  Prince Edward Island     1998   7110.2\n",
+       "2               Halifax     1998  10328.9\n",
+       "3               Moncton     1998      NaN\n",
+       "4            Saint John     1998  8689.34"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = occurred_data.melt(id_vars=['Geography'])\n",
+    "data = data.replace('..', np.nan)\n",
+    "data.head()"
    ]
   },
   {
