Loaded plotly library

--- a/cdn-crime/analysis.ipynb
+++ b/cdn-crime/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from plotly.graph_objs import *\n",
     "% matplotlib inline"
    ]
   },
