Finished first interactive graph for cdn-crime

--- a/cdn-crime/analysis.ipynb
+++ b/cdn-crime/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
     "from plotly.graph_objs import *\n",
+    "\n",
     "% matplotlib inline"
    ]
   },
@@ -358,6 +360,61 @@
     "plt.figure(figsize=(15,10))\n",
     "plt.legend()\n",
     "sns.lineplot(x='Year', y='Rate', hue='City', data=data.dropna())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traces = []\n",
+    "for city in set(data['City']):\n",
+    "    traces.append(Scatter(\n",
+    "        name = city,\n",
+    "        y = data[data['City'] == city]['Rate'],\n",
+    "        x = data[data['City'] == city]['Year']\n",
+    "    ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~joshua-t-loong/28.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = Data(traces)\n",
+    "\n",
+    "layout = Layout(\n",
+    "    title='Crime Rates',\n",
+    "    xaxis=dict(\n",
+    "        title='Year'\n",
+    "    ),\n",
+    "    yaxis=dict(\n",
+    "        title='All Crimes per 100,000 People'\n",
+    "    ),\n",
+    "    autosize=False,\n",
+    "    paper_bgcolor='rgb(226, 224, 222)',\n",
+    "    plot_bgcolor='rgb(226, 224, 222)'\n",
+    ")\n",
+    "\n",
+    "fig = dict(data=data, layout=layout)\n",
+    "\n",
+    "py.iplot(fig, filename = 'Crime-Rates')"
    ]
   },
   {
