--- a/corp_investment/analysis.ipynb
+++ b/corp_investment/analysis.ipynb
@@ -9,7 +9,10 @@
     "[This blog post](http://behindthenumbers.ca/2018/11/21/corporate-tax-cuts-enrich-shareholders-not-competitiveness/) by Behind the Numbers piqued my interest. The author only delved into machinery and equipment investment in comparison to corporate tax rates, but I felt that the generally declining manufacturing base in North America may have had an influence here. I wanted to also include intellectual property investment in the analysis as well. The result is this notebook.\n",
     "\n",
     "### Sources\n",
-    "\n"
+    "\n",
+    "* [OECD Stat](https://stats.oecd.org/index.aspx?DataSetCode=TABLE_II1#) for the corporate tax rate data\n",
+    "\n",
+    "* [StatsCan](https://www150.statcan.gc.ca/t1/tbl1/en/cv.action?pid=3610010401) for the corporate investment data"
    ]
   },
   {
