Added title to graph

--- a/corp_investment/analysis.ipynb
+++ b/corp_investment/analysis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "4                           30010  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "4  2004               22.12"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "73                           31237  2018  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        "Q1 2001                                   0.134796  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,6 +647,7 @@
     "ax2.set_ybound(0.1,0.30)\n",
     "ax2.legend(loc=(0.75,0.90))\n",
     "ax1.set_xticklabels(minor=False, labels=data.index.values[::9])\n",
+    "plt.title('Canadian Corporate Tax Rate Compared to Business I')\n",
     "\n",
     "# Save plot to image\n",
     "plt.savefig('corporate_investment.jpg')"
